feat(footer): add Fossil Order heading and blurb to footer newsletter

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
         </div>
       </div>
       <div class="col">
+        <h3 class="section-title">Join the Fossil Order</h3>
+        <p class="muted">Receive dispatches from the Grind Frontier.</p>
         <form class="newsletter" action="#" onsubmit="event.preventDefault(); alert('Subscribed — welcome to the Fossil Order.');">
           <label for="newsletter-email" class="sr-only">Your email</label>
           <div class="newsletter-row">
