style(home): add subtle coffee texture SVGs to hero background

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           <source src="assets/coffee beans video.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
+        <!-- Decorative texture layers (SVGs) for subtle background interest -->
+        <div class="hero-deco hero-ring" aria-hidden="true"></div>
+        <div class="hero-deco hero-splatter" aria-hidden="true"></div>
         <div class="hero-inner container">
           <h1 class="hero-title">A brew that fuels you forward.</h1>
           <p class="hero-tagline">Fuel for the Reckless.</p>
