feat(footer): add logo mark left of wordmark in footer

--- a/vision.html
+++ b/vision.html
@@ -161,7 +161,10 @@
     <div class="caution-stripe"></div>
     <div class="footer-inner container">
       <div class="col">
-        <div class="logo">BURNING BREW</div>
+        <div class="logo">
+          <img class="footer-logo" src="assets/svg-trans-logo-icon-01.svg" alt="Burning Brew" />
+          <span>BURNING BREW</span>
+        </div>
         <p class="tagline">From the Earth to the Grind.</p>
       </div>
       <div class="col">
