fix(nav): class-based mobile toggle and auto-close
- Use class-based toggling for mobile nav and add smooth CSS transitions
- Auto-close nav on link click and on resize to desktop
- Ensure main JS is included on vision/contact pages

style(footer): flush SVG to wordmark
perf(hero): longer video crossfade
fix(hero): make hero CTA black on hover

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="assets/favicon-01.svg">
   <link rel="stylesheet" href="css/styles.css">
+  <script defer src="js/scripts.js"></script>
 </head>
 <body class="page-contact">
   <header class="site-header">
@@ -15,7 +16,7 @@
   <img src="assets/svg-trans-logo-icon-01-bone.svg" class="brand-logo" alt="Burning Brew logo" />
     <span class="brand-text">BURNING BREW</span>
   </a>
-      <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation">☰</button>
+  <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
       <nav class="site-nav" id="site-nav" aria-label="Main navigation">
   <a href="products.html">Products</a>
   <a href="vision.html">Vision</a>
