chore(site): update index and add coffee-icon asset

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
 
     <section class="manifesto fossil-section container">
-      <h2 class="section-title">We Don't Brew. We Burn.</h2>
+      <h2 class="section-title">You Burn Through Fuel. We Brew It.</h2>
       <p class="lead">Caffeine as combustion. Fossil pressure rewritten into liquid fire. This is ritual, not refreshment.</p>
       <p class="manifesto-copy">We worship pressure. We praise the grind. The earth gave us heat; we returned it in shot glasses and jerry cans. Drink slow. Burn fast.</p>
     </section>
