fix(products): make testimonial background full-bleed and keep content aligned

--- a/products.html
+++ b/products.html
@@ -79,18 +79,21 @@
       </article>
     </section>
 
-    <!-- Testimonials — follow branding: loud headers, short declarative praise -->
-    <section class="testimonials container" aria-label="Customer testimonials">
-      <h3 class="section-title">Dispatches from the Pit</h3>
-      <div class="testimonial-grid">
-        <blockquote class="testimonial">
-          <p class="testimonial-quote">“This stuff is like diesel for the soul. Morning shock therapy. I’ve never been more awake.”</p>
-          <cite class="testimonial-author">— R. Tank, Roadhouse Barista</cite>
-        </blockquote>
-        <blockquote class="testimonial">
-          <p class="testimonial-quote">“Kept my crew running through the night shift. No lies, just fuel.”</p>
-          <cite class="testimonial-author">— M. Graves, Night Watch</cite>
-        </blockquote>
+    <!-- Testimonials — follow branding: loud headers, short declarative praise
+         Section background spans full viewport; inner .container aligns content -->
+    <section class="testimonials" aria-label="Customer testimonials">
+      <div class="container">
+        <h3 class="section-title">Dispatches from the Pit</h3>
+        <div class="testimonial-grid">
+          <blockquote class="testimonial">
+            <p class="testimonial-quote">“This stuff is like diesel for the soul. Morning shock therapy. I’ve never been more awake.”</p>
+            <cite class="testimonial-author">— R. Tank, Roadhouse Barista</cite>
+          </blockquote>
+          <blockquote class="testimonial">
+            <p class="testimonial-quote">“Kept my crew running through the night shift. No lies, just fuel.”</p>
+            <cite class="testimonial-author">— M. Graves, Night Watch</cite>
+          </blockquote>
+        </div>
       </div>
     </section>
 
