fix(hero): simplify video sizing and encode asset filenames to avoid space issues

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
   <main>
     <section class="contact-hero">
-      <video class="hero-video hero-video--contact hero-video--a" src="assets/grinding grains.mp4" autoplay muted loop playsinline></video>
+      <video class="hero-video hero-video--contact hero-video--a" src="assets/grinding%20grains.mp4" autoplay muted loop playsinline></video>
       <div class="container hero-inner">
         <h1 class="section-title">Signal the Outpost</h1>
         <p class="muted">We respond between dust storms.</p>
