--- a/vision.html
+++ b/vision.html
@@ -27,7 +27,7 @@
 
   <main>
     <section class="vision-hero">
-      <video class="hero-video hero-video--vision hero-video--a" src="assets/coffee beans roasting.mp4" autoplay muted loop playsinline></video>
+      <video class="hero-video hero-video--vision hero-video--a" src="assets/coffee%20beans%20roasting.mp4" autoplay muted loop playsinline></video>
       <div class="container hero-inner">
         <h1 class="section-title">WHY WE BURN.</h1>
         <p class="lead">Coffee that tells the truth… We worship pressure. We praise the grind.</p>
