style(products): remove 'Plug into the Crude' buttons and add colored spec labels

--- a/products.html
+++ b/products.html
@@ -38,13 +38,12 @@
         <h2>High-Octane Dark</h2>
         <p class="muted">A High-Octane Black. Roast profile: Molten, bitter, commanding.</p>
         <ul class="specs">
-          <li>Origin: Deep Strata</li>
-          <li>Grind: Coarse / Whole Bean</li>
-          <li>Taste: Charcoal, Smoke, Bittersweet Amber</li>
+          <li><strong style="color: #990000;"></strong>Origin:</strong> Deep Strata</li>
+          <li><strong style="color: #4a7c7c;">Grind:</strong> Coarse / Whole Bean</li>
+          <li><strong style="color: #ffc72c;">Taste:</strong> Charcoal, Smoke, Bittersweet Amber</li>
         </ul>
         <div class="actions">
           <button class="btn crude-button">Burn Deeper</button>
-          <button class="btn">Plug into the Crude</button>
         </div>
       </article>
 
@@ -53,13 +52,12 @@
         <h2>Single Origin — Fault Line</h2>
         <p class="muted">Cruelly extracted from cracked volcanic soils.</p>
         <ul class="specs">
-          <li>Origin: Guatemalan Fault Line</li>
-          <li>Grind: Medium</li>
-          <li>Taste: Earth, Smoke, Late-Bloom Spice</li>
+          <li><strong style="color: #990000;">Origin:</strong> Guatemalan Fault Line</li>
+          <li><strong style="color: #4a7c7c;">Grind:</strong> Medium</li>
+          <li><strong style="color: #ffc72c;">Taste:</strong> Earth, Smoke, Late-Bloom Spice</li>
         </ul>
         <div class="actions">
           <button class="btn crude-button">Burn Deeper</button>
-          <button class="btn">Plug into the Crude</button>
         </div>
       </article>
 
@@ -68,13 +66,12 @@
         <h2>The Crude Shot</h2>
         <p class="muted">Unfiltered. Unapologetic. A molten extraction.</p>
         <ul class="specs">
-          <li>Origin: Refined Blend</li>
-          <li>Grind: Fine</li>
-          <li>Taste: Concentrated tar, salted caramel</li>
+          <li><strong style="color: #990000;">Origin:</strong> Refined Blend</li>
+          <li><strong style="color: #4a7c7c;">Grind:</strong> Fine</li>
+          <li><strong style="color: #ffc72c;">Taste:</strong> Concentrated tar, salted caramel</li>
         </ul>
         <div class="actions">
           <button class="btn crude-button">Burn Deeper</button>
-          <button class="btn">Plug into the Crude</button>
         </div>
       </article>
     </section>
