style(checkout): update placeholder text for clarity and consistency

--- a/checkout.html
+++ b/checkout.html
@@ -116,13 +116,13 @@
         <form id="checkoutForm" novalidate>
           <div class="field">
             <label for="fullName">Full Name</label>
-            <input id="fullName" name="fullName" type="text" placeholder="Who survives the grind?" required aria-describedby="fullNameHelp fullNameError">
+            <input id="fullName" name="fullName" type="text" placeholder="Who survives the grind?" required aria-describedby="fullNameError">
             <div id="fullNameError" class="error" aria-live="assertive"></div>
           </div>
 
           <div class="field">
             <label for="email">Email</label>
-            <input id="email" name="email" type="email" placeholder="Where do we send your coordinates?" required aria-describedby="emailHelp emailError">
+            <input id="email" name="email" type="email" placeholder="We'll send your tracking info here." required aria-describedby="emailError">
             <div id="emailError" class="error" aria-live="assertive"></div>
           </div>
 
