chore(checkout): remove helper text under product dropdown for cleaner layout

--- a/checkout.html
+++ b/checkout.html
@@ -47,6 +47,8 @@
     form .field{margin-bottom:1.3rem}
     label{display:block;font-weight:700;font-size:.85rem;margin-bottom:.25rem}
     input[type="text"],input[type="email"],input[type="number"],textarea,select{width:100%;padding:.6rem;border-radius:6px;background:transparent;border:1px solid rgba(240,233,214,0.12);color:var(--bone);box-sizing:border-box}
+    select{background:var(--panel);color:var(--bone);appearance:none;-webkit-appearance:none;-moz-appearance:none}
+    select option{background:var(--panel);color:var(--bone)}
     textarea{min-height:84px}
     input:focus,textarea:focus,select:focus{outline:3px solid var(--hazard);box-shadow:0 0 12px rgba(255,199,44,0.08)}
     .error{color:#ffb3b3;font-size:.9rem;margin-top:.3rem}
