style(checkout): remove yellow focus outline from shipping option buttons

--- a/checkout.html
+++ b/checkout.html
@@ -51,6 +51,7 @@
     select option{background:var(--panel);color:var(--bone)}
     textarea{min-height:84px}
     input:focus,textarea:focus,select:focus{outline:3px solid var(--hazard);box-shadow:0 0 12px rgba(255,199,44,0.08)}
+    input[type="radio"]:focus,input[type="checkbox"]:focus{outline:none;box-shadow:none}
     .error{color:#ffb3b3;font-size:.9rem;margin-top:.3rem}
     .invalid{border-color:#990000}
 
